update LeetCode Weekly Contest 468

--- a/algorithm/LeetCode/[Easy] 1935. Maximum Number of Words You Can Type.md
+++ b/algorithm/LeetCode/[Easy] 1935. Maximum Number of Words You Can Type.md
@@ -47,3 +47,30 @@ class Solution:
     def canBeTypedWords(self, text: str, brokenLetters: str) -> int:
         return sum([1 for word in text.split() if len(set(word) & set(brokenLetters)) == 0])
 ```
+
+**Solution 2: (Counter, Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.81 MB, Beats 79.40%
+```
+```c++
+class Solution {
+public:
+    int canBeTypedWords(string text, string brokenLetters) {
+        int n = text.size(), i, ans = 0;
+        vector<bool> cnt(26);
+        for (i = 0; i < n; i ++) {
+            if (text[i] != ' ') {
+                cnt[text[i] - 'a'] = true;
+            }
+            if (i == n - 1 || text[i] == ' ') {
+                if (all_of(brokenLetters.begin(), brokenLetters.end(), [&](auto c){return cnt[c - 'a'] == false;})) {
+                    ans += 1;
+                }
+                fill(cnt.begin(), cnt.end(), false);
+            }
+        }
+        return ans;
+    }
+};
+```
