--- a/algorithm/LeetCode/[Hard] 3049. Earliest Second to Mark Indices II.md
+++ b/algorithm/LeetCode/[Hard] 3049. Earliest Second to Mark Indices II.md
@@ -135,3 +135,63 @@ public:
     }
 };
 ```
+
+**Solution 2: (Binary Search, Heap)**
+```
+Runtime: 32 ms, Beats 27.59%
+Memory: 47.73 MB, Beats 15.52%
+```
+```c++
+class Solution {
+    bool check(vector<int> &nums, vector<int> &changeIndices, int mid) {
+        int n = nums.size(), m = changeIndices.size(), i;
+        long long tot = 0;
+        for (auto &num: nums) {
+            tot += num;
+        }
+        priority_queue<int, vector<int>, greater<>> pq;
+        unordered_map<int, int> mp;
+        for (i = 0; i < mid; i++) {
+            if (mp.find(changeIndices[i]) == mp.end()) {
+                mp[changeIndices[i]] = i;
+            }
+        }
+        long long mark = 1;
+        for (i = mid - 1; i >= 0; i--) {
+            if (nums[changeIndices[i] - 1] == 0) {
+                mark++;
+            } else if (mp[changeIndices[i]] == i) {
+                pq.push(nums[changeIndices[i] - 1]);
+                mark--;
+                tot -= nums[changeIndices[i] - 1];
+                if (mark < 0) {
+                    mark += 2;
+                    tot += pq.top();
+                    pq.pop();
+                }
+            } else {
+                mark++;
+            }
+        }
+        long long toti = tot + n + pq.size();
+        if (toti <= ((long long)mid + 1)) {
+            return true;
+        }
+        return false;
+    }
+public:
+    int earliestSecondToMarkIndices(vector<int>& nums, vector<int>& changeIndices) {
+        int n = nums.size(), m = changeIndices.size(), low = 0, high = m - 1, mid, ans = -1;
+        while (low <= high) {
+            mid = (low + high) / 2;
+            if (check(nums, changeIndices, mid)) {
+                ans = mid + 1;
+                high = mid - 1;
+            } else {
+                low = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
