--- a/algorithm/LeetCode/[Hard] 3123. Find Edges in Shortest Paths.md
+++ b/algorithm/LeetCode/[Hard] 3123. Find Edges in Shortest Paths.md
@@ -99,55 +99,55 @@ public:
 
 **Solution 2: (Dijkstra, backtracking)**
 ```
-Runtime: 668 ms, Beats 27.01%
-Memory: 202.32 MB, Beats 57.57%
+Runtime: 132 ms, Beats 92.50%
+Memory: 202.30 MB, Beats 53.11%
 ```
 ```c++
 class Solution {
 public:
     vector<bool> findAnswer(int n, vector<vector<int>>& edges) {
-        int m = edges.size(), i;
-        vector<vector<tuple<int,int,int>>> g(n);
-        for (i = 0; i < m; i ++) {
-            g[edges[i][0]].push_back({edges[i][1], edges[i][2], i});
-            g[edges[i][1]].push_back({edges[i][0], edges[i][2], i});
-        }
-        priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
-        vector<pair<int,vector<pair<int,int>>>> dist(n, {INT_MAX, {}});
+        int m = edges.size(), i, a, b, _w, nw;
+        vector<vector<array<int, 3>>> g(n);
+        priority_queue<array<int, 2>, vector<array<int, 2>>, greater<>> pq;
+        vector<pair<int, vector<array<int, 2>>>> dist(n, {INT_MAX, {}});
+        queue<int> q;
+        vector<bool> visited(n);
         vector<bool> ans(m);
+        for (i = 0; i < m; i ++) {
+            a = edges[i][0];
+            b = edges[i][1];
+            _w = edges[i][2];
+            g[a].push_back({b, _w, i});
+            g[b].push_back({a, _w, i});
+        }
         pq.push({0, 0});
-        dist[0] = {0, {{-1,-1}}};
+        dist[0].first = 0;
         while (pq.size()) {
             auto [w, u] = pq.top();
             pq.pop();
-            if (w > dist[n-1].first) {
+            if (w > dist[n - 1].first) {
                 break;
             }
-            for (auto [v, dw, j]: g[u]) {
-                if (dist[v].first > w + dw) {
-                    dist[v].first = w + dw;
+            for (auto &[v, dw, j]: g[u]) {
+                nw = w + dw;
+                if (nw < dist[v].first) {
+                    dist[v].first = nw;
                     dist[v].second = {{u, j}};
-                    pq.push({w + dw, v});
-                } else if (dist[v].first == w + dw) {
+                    pq.push({nw, v});
+                } else if (nw == dist[v].first) {
                     dist[v].second.push_back({u, j});
-                    pq.push({w + dw, v});
                 }
             }
         }
-        queue<int> q;
-        for (auto [u, j]: dist[n-1].second) {
-            ans[j] = true;
-            q.push(u);
-        }
+        q.push(n - 1);
+        visited[n - 1] = true;
         while (q.size()) {
             auto u = q.front();
             q.pop();
-            if (u == 0) {
-                continue;
-            }
-            for (auto [v, j]: dist[u].second) {
-                if (!ans[j]) {
-                    ans[j] = true;
+            for (auto &[v, j]: dist[u].second) {
+                ans[j] = true;
+                if (!visited[v]) {
+                    visited[v] = true;
                     q.push(v);
                 }
             }
