--- a/algorithm/LeetCode/[Hard] 1912. Design Movie Rental System.md
+++ b/algorithm/LeetCode/[Hard] 1912. Design Movie Rental System.md
@@ -106,54 +106,57 @@ class MovieRentingSystem:
 # param_4 = obj.report()`
 ```
 
-**Solution 2: (Hash Table, Set)**
+**Solution 2: (Hash Table, Set, sorted set)**
 ```
-Runtime: 327 ms, Beats 54.32%
-Memory: 444.49 MB, Beats 22.22%
+Runtime: 360 ms, Beats 36.50%
+Memory: 444.45 MB, Beats 24.82%
 ```
 ```c++
 class MovieRentingSystem {
-    unordered_map<int, unordered_map<int, int>> m;
-    unordered_map<int, set<array<int,2>>> free;
-    set<array<int,3>> work;
+    unordered_map<int, unordered_map<int, int>> m;  // shop: movie, price
+    unordered_map<int, set<array<int, 2>>> free;  // unrented movie: price, shop
+    set<array<int, 3>> work;  // rented price: shop, movie
 public:
     MovieRentingSystem(int n, vector<vector<int>>& entries) {
-        for (auto &e: entries) {
-            m[e[0]][e[1]] = e[2];
-            free[e[1]].insert({e[2], e[0]});
+        int shop, movie, price;
+        for (auto &entry: entries) {
+            shop = entry[0];
+            movie = entry[1];
+            price = entry[2];
+            m[shop][movie] = price;
+            free[movie].insert({price, shop});
         }
     }
     
     vector<int> search(int movie) {
-        auto it = free[movie].begin();
-        int k = 0;
         vector<int> rst;
-        while (k < 5 && it != free[movie].end()) {
+        auto it = free[movie].begin();
+        while (rst.size() < 5 && it != free[movie].end()) {
             rst.push_back((*it)[1]);
             it++;
-            k += 1;
         }
         return rst;
     }
     
     void rent(int shop, int movie) {
-        free[movie].erase({m[shop][movie], shop});
-        work.insert({m[shop][movie], shop, movie});
+        int price = m[shop][movie];
+        work.insert({price, shop, movie});
+        free[movie].erase({price, shop});
     }
     
     void drop(int shop, int movie) {
-        work.erase({m[shop][movie], shop, movie});
-        free[movie].insert({m[shop][movie], shop});
+        int price = m[shop][movie];
+        work.erase({price, shop, movie});
+        free[movie].insert({price, shop});
     }
     
     vector<vector<int>> report() {
-        auto it = work.begin();
-        int k = 0;
         vector<vector<int>> rst;
-        while (k < 5 && it != work.end()) {
-            rst.push_back({(*it)[1], (*it)[2]});
+        auto it = work.begin();
+        while (rst.size() < 5 && it != work.end()) {
+            auto [price, shope, movie] = *it;
+            rst.push_back({shope, movie});
             it++;
-            k += 1;
         }
         return rst;
     }
