--- a/algorithm/LeetCode/[Hard] 2197. Replace Non-Coprime Numbers in Array.md
+++ b/algorithm/LeetCode/[Hard] 2197. Replace Non-Coprime Numbers in Array.md
@@ -91,3 +91,31 @@ public:
     }
 };
 ```
+
+**Solution 3: (Math, Greedy)**
+```
+Runtime: 24 ms, Beats 44.91%
+Memory: 124.99 MB, Beats 93.52%
+```
+```c++
+class Solution {
+public:
+    vector<int> replaceNonCoprimes(vector<int>& nums) {
+        vector<int> ans;
+        int a;
+        for (auto &num: nums) {
+            if (ans.size() && gcd(ans.back(), num) > 1) {
+                a = num;
+                while (ans.size() && gcd(ans.back(), a) > 1) {
+                    a = lcm(ans.back(), a);
+                    ans.pop_back();
+                }
+                ans.push_back(a);
+            } else {
+                ans.push_back(num);
+            }
+        }
+        return ans;
+    }
+};
+```
