update LeetCode Biweekly Contest 166

--- a/algorithm/LeetCode/[Easy] 3005. Count Elements With Maximum Frequency.md
+++ b/algorithm/LeetCode/[Easy] 3005. Count Elements With Maximum Frequency.md
@@ -33,24 +33,23 @@ So the number of elements in the array with maximum frequency is 5.
 ---
 **Solution 1: (Counter)**
 ```
-Runtime: 0 ms
-Memory: 19.24 MB
+Runtime: 0 ms Beats, 100.00%
+Memory: 23.22 MB, Beats 36.33%
 ```
 ```c++
 class Solution {
 public:
     int maxFrequencyElements(vector<int>& nums) {
-        int cnt[101] = {0};
-        for (int num: nums) {
+        int i, mx = 0, ans = 0;
+        vector<int> cnt(101);
+        for (auto &num: nums) {
             cnt[num] += 1;
+            mx = max(mx, cnt[num]);
         }
-        int mx = 0;
-        for (int i = 1; i < 101; i ++) {
-            mx = max(mx, cnt[i]);
-        }
-        int ans = 0;
-        for (int i = 1; i < 101; i ++) {
-            ans += cnt[i] == mx ? cnt[i] : 0;
+        for (i = 1; i <= 100; i ++) {
+            if (cnt[i] == mx) {
+                ans += cnt[i];
+            }
         }
         return ans;
     }
