--- a/algorithm/LeetCode/[Hard] 1912. Design Movie Rental System.md
+++ b/algorithm/LeetCode/[Hard] 1912. Design Movie Rental System.md
@@ -171,3 +171,69 @@ public:
  * vector<vector<int>> param_4 = obj->report();
  */
 ```
+
+**Solution 3: (Hash Table, Set, sorted set, key encode)**
+```
+Runtime: 272 ms, Beats 82.48%
+Memory: 402.63 MB, Beats 70.07%
+```
+```c++
+class MovieRentingSystem {
+    unordered_map<long long, int> m;  // ((shop << 20) + movie): price
+    unordered_map<int, set<array<int, 2>>> free;  // unrented movie: price, shop
+    set<array<int, 3>> work;  // rented price: shop, movie
+public:
+    MovieRentingSystem(int n, vector<vector<int>>& entries) {
+        int shop, movie, price;
+        for (auto &entry: entries) {
+            shop = entry[0];
+            movie = entry[1];
+            price = entry[2];
+            m[((long long)shop << 20) + movie] = price;
+            free[movie].insert({price, shop});
+        }
+    }
+    
+    vector<int> search(int movie) {
+        vector<int> rst;
+        auto it = free[movie].begin();
+        while (rst.size() < 5 && it != free[movie].end()) {
+            rst.push_back((*it)[1]);
+            it++;
+        }
+        return rst;
+    }
+    
+    void rent(int shop, int movie) {
+        int price = m[((long long)shop << 20) + movie];
+        work.insert({price, shop, movie});
+        free[movie].erase({price, shop});
+    }
+    
+    void drop(int shop, int movie) {
+        int price = m[((long long)shop << 20) + movie];
+        work.erase({price, shop, movie});
+        free[movie].insert({price, shop});
+    }
+    
+    vector<vector<int>> report() {
+        vector<vector<int>> rst;
+        auto it = work.begin();
+        while (rst.size() < 5 && it != work.end()) {
+            auto [price, shope, movie] = *it;
+            rst.push_back({shope, movie});
+            it++;
+        }
+        return rst;
+    }
+};
+
+/**
+ * Your MovieRentingSystem object will be instantiated and called as such:
+ * MovieRentingSystem* obj = new MovieRentingSystem(n, entries);
+ * vector<int> param_1 = obj->search(movie);
+ * obj->rent(shop,movie);
+ * obj->drop(shop,movie);
+ * vector<vector<int>> param_4 = obj->report();
+ */
+```
