--- a/algorithm/LeetCode/[Hard] 2296. Design a Text Editor.md
+++ b/algorithm/LeetCode/[Hard] 2296. Design a Text Editor.md
@@ -99,10 +99,87 @@ class TextEditor:
 # param_4 = obj.cursorRight(k)
 ```
 
-**Solution 2: (Two Strings)**
+**Solution 3: (List)**
 ```
-Runtime: 318 ms
-Memory Usage: 113 MB
+Runtime: 393 ms, Beats 14.98%
+Memory: 318.60 MB, Beats 9.24%
+```
+```c++
+class TextEditor {
+    list<char> dp;
+    list<char>::iterator it;
+public:
+    TextEditor() {
+        dp.push_back('#');
+        it = dp.begin();
+    }
+    
+    void addText(string text) {
+        for (auto &c: text) {
+            dp.insert(next(it), c);
+            it++;
+        }
+    }
+    
+    int deleteText(int k) {
+        int rst = 0;
+        while (k && it != dp.begin()) {
+            dp.erase(it--);
+            k -= 1;
+            rst += 1;
+        }
+        return rst;
+    }
+    
+    string cursorLeft(int k) {
+        while (it != dp.begin() && k) {
+            it--;
+            k -= 1;
+        }
+        string rst;
+        int ck = 10;
+        auto cit = it;
+        while (ck && cit != dp.begin()) {
+            rst += *cit;
+            cit--;
+            ck -= 1;
+        }
+        reverse(rst.begin(), rst.end());
+        return rst;
+    }
+    
+    string cursorRight(int k) {
+        while (it != prev(dp.end()) && k) {
+            it++;
+            k -= 1;
+        }
+        string rst;
+        int ck = 10;
+        auto cit = it;
+        while (ck && cit != dp.begin()) {
+            rst += *cit;
+            cit--;
+            ck -= 1;
+        }
+        reverse(rst.begin(), rst.end());
+        return rst;
+    }
+};
+
+/**
+ * Your TextEditor object will be instantiated and called as such:
+ * TextEditor* obj = new TextEditor();
+ * obj->addText(text);
+ * int param_2 = obj->deleteText(k);
+ * string param_3 = obj->cursorLeft(k);
+ * string param_4 = obj->cursorRight(k);
+ */
+```
+
+**Solution 3: (Two Strings)**
+```
+Runtime: 31 ms, Beats 99.08%
+Memory: 124.25 MB, Beats 57.30%
 ```
 ```c++
 class TextEditor {
@@ -113,29 +190,35 @@ public:
     }
     
     void addText(string text) {
-        before.insert(end(before), begin(text), end(text));
+        before += text;
     }
     
     int deleteText(int k) {
-        k = min(k, (int)before.size());
-        before.resize(before.size() - k);
-        return k;
+        int rst = 0;
+        while (before.size() && k) {
+            before.pop_back();
+            k -= 1;
+            rst += 1;
+        }
+        return rst;
     }
     
     string cursorLeft(int k) {
-        while(k-- && !before.empty()) {
-            after.push_back(before.back());
+        while (before.size() && k) {
+            after += before.back();
             before.pop_back();
+            k -= 1;
         }
-        return before.substr(before.size() - min((int)before.size(), 10));
+        return before.substr(max(0, (int)before.size() - 10));
     }
     
     string cursorRight(int k) {
-        while(k-- && !after.empty()) {
-            before.push_back(after.back());
+        while (after.size() && k) {
+            before += after.back();
             after.pop_back();
+            k -= 1;
         }
-        return before.substr(before.size() - min((int)before.size(), 10));
+        return before.substr(max(0, (int)before.size() - 10));
     }
 };
 
