--- a/algorithm/LeetCode/[Hard] 3321. Find X-Sum of All K-Long Subarrays II.md
+++ b/algorithm/LeetCode/[Hard] 3321. Find X-Sum of All K-Long Subarrays II.md
@@ -106,3 +106,61 @@ public:
     }
 };
 ```
+
+**Solution 2: (Sliding Window, top and bottom set)**
+```
+Runtime: 874 ms, Beats 64.06%
+Memory: 345.13 MB, Beats 10.94%
+```
+```c++
+class Solution {
+public:
+    vector<long long> findXSum(vector<int>& nums, int k, int x) {
+        int n = nums.size(), i, j = 0;
+        unordered_map<int, int> cnt;
+        set<pair<int, int>> bottom, top;
+        long long a = 0;
+        vector<long long> ans(n - k + 1);
+        for (i = 0; i < n; i++) {
+            if (cnt[nums[i]]) {
+                if (bottom.count({cnt[nums[i]], nums[i]})) {
+                    bottom.erase({cnt[nums[i]], nums[i]});
+                } else {
+                    a -= 1LL * nums[i] * cnt[nums[i]];
+                    top.erase({cnt[nums[i]], nums[i]});
+                }
+            }
+            cnt[nums[i]] += 1;
+            bottom.insert({cnt[nums[i]], nums[i]});
+            while (top.size() < x && bottom.size()) {
+                auto [ck, b] = *bottom.rbegin();
+                a += 1LL * ck * b;
+                bottom.erase(prev(bottom.end()));
+                top.insert({ck, b}); 
+            }
+            while (top.size() && bottom.size() && *top.begin() < *bottom.rbegin()) {
+                bottom.insert(*top.begin());
+                a -= 1LL * top.begin()->first * top.begin()->second;
+                top.erase(top.begin());
+                top.insert(*bottom.rbegin());
+                a += 1LL * bottom.rbegin()->first * bottom.rbegin()->second;
+                bottom.erase(prev(bottom.end()));
+            }
+            if (i >= k - 1) {
+                ans[i - k + 1] = a;
+                if (bottom.count({cnt[nums[i - k + 1]], nums[i - k + 1]})) {
+                    bottom.erase({cnt[nums[i - k + 1]], nums[i - k + 1]});
+                } else {
+                    a -= 1LL * nums[i - k + 1] * cnt[nums[i - k + 1]];
+                    top.erase({cnt[nums[i - k + 1]], nums[i - k + 1]});
+                }
+                cnt[nums[i - k + 1]] -= 1;
+                if (cnt[nums[i - k + 1]]) {
+                    bottom.insert({cnt[nums[i - k + 1]], nums[i - k + 1]});
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
