--- a/algorithm/LeetCode/[Hard] 3620. Network Recovery Pathways.md
+++ b/algorithm/LeetCode/[Hard] 3620. Network Recovery Pathways.md
@@ -126,3 +126,66 @@ public:
     }
 };
 ```
+
+**Solution 2: (Binary Search, Dijkstra)**
+```
+Runtime: 558 ms, Beats 51.32%
+Memory: 362.26 MB, Beats 66.57%
+```
+```c++
+class Solution {
+    bool check(vector<vector<pair<int, int>>>& g, vector<bool> &online, long long mid, long long k){
+        int n = g.size();
+        vector<long long> dist(n, LLONG_MAX);
+        dist[0] = 0;
+        priority_queue<pair<long long, int> , vector<pair<long long, int>>, greater<>> pq;
+        pq.push({0,0});
+        while (!pq.empty()){
+            auto [w, u] = pq.top();
+            pq.pop();
+            if (w > dist[u]) {
+                continue;
+            }
+            if (online[u] == false) {
+                continue;
+            }
+            for (auto [v, dw] : g[u]){
+                if (dw < mid) {
+                    continue;
+                }
+                if (online[v] == false) {
+                    continue;
+                }
+                long long nw = w + dw;
+                if (nw > k) {
+                    continue;
+                }
+                if (nw < dist[v]){
+                    pq.push({nw , v});
+                    dist[v] = nw;
+                }
+            }
+        }
+        return dist.back() <= k;
+    }
+public:
+    int findMaxPathScore(vector<vector<int>>& edges, vector<bool>& online, long long k) {
+        int n = online.size(), low = 0, high = -1, ans = -1;
+        vector<vector<pair<int, int>>> graph(n);
+        for (int i = 0; i < edges.size(); i++) {
+            graph[edges[i][0]].push_back({edges[i][1], edges[i][2]});
+            high = max(high, edges[i][2]);
+        }
+        while (low <= high){
+            long long mid = (low + high) / 2;
+            if (check(graph, online, mid, k)) {
+                ans = mid;
+                low = mid + 1;
+            } else {
+                high = mid - 1;
+            }
+        }
+        return ans;
+    }
+};
+```
