update LeetCode Weekly Contest 470

--- a/algorithm/LeetCode/[Easy] 1518. Water Bottles.md
+++ b/algorithm/LeetCode/[Easy] 1518. Water Bottles.md
@@ -84,3 +84,29 @@ public:
     }
 };
 ```
+
+**Solution 3: (Math)**
+
+    v    v       v
+    9 -> 3, 0 -> 1, 0
+
+     v    v       v
+    15 -> 3 + 3 = 1 + 2
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.78 MB, Beats 80.28%
+```
+```c++
+class Solution {
+public:
+    int numWaterBottles(int numBottles, int numExchange) {
+        int n = numBottles, d = numExchange, r, ans = numBottles;
+        while (n >= d) {
+            ans += n / d;
+            n = n / d + n % d;
+        }
+        return ans;
+    }
+};
+```
