update LeetCode Weekly Contest 472

--- a/algorithm/LeetCode/[Easy] 2273. Find Resultant Array After Removing Anagrams.md
+++ b/algorithm/LeetCode/[Easy] 2273. Find Resultant Array After Removing Anagrams.md
@@ -75,3 +75,71 @@ public:
     }
 };
 ```
+
+**Solution 3: (Sort, Sliding Window)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 16.01 MB, Beats 75.29%
+```
+```c++
+class Solution {
+public:
+    vector<string> removeAnagrams(vector<string>& words) {
+        int n = words.size(), i = 0, j;
+        vector<string> ans;
+        string pre, cur;
+        while (i < n) {
+            ans.push_back(words[i]);
+            pre = words[i];
+            sort(pre.begin(), pre.end());
+            j = i + 1;
+            while (j < n) {
+                cur = words[j];
+                sort(cur.begin(), cur.end());
+                if (pre != cur) {
+                    break;
+                }
+                j += 1;
+            }
+            i = j;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (Counter)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 18.04 MB, Beats 19.22%
+```
+```c++
+class Solution {
+public:
+    vector<string> removeAnagrams(vector<string>& words) {
+        vector<string> res = {words[0]};  // result array
+        int n = words.size();
+        // determine if two words are anagrams
+        auto compare = [](const string& word1, const string& word2) -> bool {
+            vector<int> freq(26);
+            for (char ch : word1) {
+                ++freq[ch - 'a'];
+            }
+            for (char ch : word2) {
+                --freq[ch - 'a'];
+            }
+            return all_of(freq.begin(), freq.end(),
+                          [](int x) { return x == 0; });
+        };
+
+        for (int i = 1; i < n; ++i) {
+            if (compare(words[i], words[i - 1])) {
+                continue;
+            }
+            res.push_back(words[i]);
+        }
+        return res;
+    }
+};
+
+```
