--- a/algorithm/LeetCode/[Easy] 3349. Adjacent Increasing Subarrays Detection I.md
+++ b/algorithm/LeetCode/[Easy] 3349. Adjacent Increasing Subarrays Detection I.md
@@ -97,3 +97,29 @@ public:
     }
 };
 ```
+
+**Solution 3: (Prefix Sum)**
+```
+Runtime: 20 ms, Beats 17.26%
+Memory: 40.34 MB, Beats 75.22%
+```
+```c++
+class Solution {
+public:
+    bool hasIncreasingSubarrays(vector<int>& nums, int k) {
+        int n = nums.size(), i, a = 1, pre = 0;
+        for (i = 1; i < n; i ++) {
+            if (nums[i] > nums[i - 1]) {
+                a += 1;
+            } else {
+                pre = a;
+                a = 1;
+            }
+            if (a >= 2 * k || min(pre, a) >= k) {
+                return true;
+            }
+        }
+        return false;
+    }
+};
+```
