--- a/algorithm/LeetCode/[Hard] 2598. Smallest Missing Non-negative Integer After Operations.md
+++ b/algorithm/LeetCode/[Hard] 2598. Smallest Missing Non-negative Integer After Operations.md
@@ -76,3 +76,28 @@ public:
     }
 };
 ```
+
+**Solution 3: (Counter)**
+```
+Runtime: 3 ms, Beats 90.80%
+Memory: 120.45 MB, Beats 89.16%
+```
+```c++
+class Solution {
+public:
+    int findSmallestInteger(vector<int>& nums, int value) {
+        int n = nums.size(), i, mn = INT_MAX, b;
+        vector<int> cnt(value);
+        for (auto &num: nums) {
+            cnt[((num % value) + value) % value] += 1;
+        }
+        for (i = value - 1; i >= 0; i --) {
+            if (cnt[i] <= mn) {
+                mn = cnt[i];
+                b = i;
+            }
+        }
+        return b + value * cnt[b];
+    }
+};
+```
