--- a/algorithm/LeetCode/[Hard] 3003. Maximize the Number of Partitions After Operations.md
+++ b/algorithm/LeetCode/[Hard] 3003. Maximize the Number of Partitions After Operations.md
@@ -124,3 +124,120 @@ public:
     }
 };
 ```
+
+**Solution 2: (Bitwise Operations + Preprocessing + Enumeration, left and right)**
+```
+Runtime: 20 ms, Beats 81.97%
+Memory: 16.68 MB, Beats 83.61%
+```
+```c++
+class Solution {
+public:
+    int maxPartitionsAfterOperations(string s, int k) {
+        int n = s.length();
+        vector<vector<int>> left(n, vector<int>(3)), right(n, vector<int>(3));
+        int num = 0, mask = 0, count = 0;
+        for (int i = 0; i < n - 1; i++) {
+            int binary = 1 << (s[i] - 'a');
+            if (!(mask & binary)) {
+                count++;
+                if (count <= k) {
+                    mask |= binary;
+                } else {
+                    num++;
+                    mask = binary;
+                    count = 1;
+                }
+            }
+            left[i + 1][0] = num;  // split number
+            left[i + 1][1] = mask;  // character mask
+            left[i + 1][2] = count;  // distinct character
+        }
+
+        num = 0, mask = 0, count = 0;
+        for (int i = n - 1; i > 0; i--) {
+            int binary = 1 << (s[i] - 'a');
+            if (!(mask & binary)) {
+                count++;
+                if (count <= k) {
+                    mask |= binary;
+                } else {
+                    num++;
+                    mask = binary;
+                    count = 1;
+                }
+            }
+            right[i - 1][0] = num;
+            right[i - 1][1] = mask;
+            right[i - 1][2] = count;
+        }
+
+        int Max = 0;
+        for (int i = 0; i < n; i++) {
+            int seg = left[i][0] + right[i][0] + 2;
+            int totMask = left[i][1] | right[i][1];
+            int totCount = 0;
+            while (totMask) {
+                totMask = totMask & (totMask - 1);
+                totCount++;
+            }
+            if (left[i][2] == k && right[i][2] == k && totCount < 26) {
+                seg++;
+            } else if (min(totCount + 1, 26) <= k) {
+                seg--;
+            }
+            Max = max(Max, seg);
+        }
+        return Max;
+    }
+};
+```
+
+**Solution 3: (DP Top-Down, bitmask)**
+```
+Runtime: 531 ms, Beats 71.31%
+Memory: 157.65 MB, Beats 22.95%
+```
+```c++
+class Solution {
+    int dfs(int i, int mask, bool has_changed, unordered_map<long long, int>& dp, const string& s, int k) {
+        if (i == s.size()) {
+            return 1;
+        }
+        long long key = (long long) i << 32 | mask << 1 | has_changed;
+        if (dp.count(key)) {
+            return dp[key];
+        }
+        int res = 0;
+        
+        // no change this letter = not taken
+        int next_mask = mask | (1 << (s[i] - 'a'));
+        if (__builtin_popcount(next_mask) > k) {
+            res = max(res, 1 + dfs(i + 1, 1 << (s[i] - 'a'), has_changed, dp, s, k));
+        }
+        else {
+            res = max(res, dfs(i + 1, next_mask, has_changed, dp, s, k));
+        }
+
+        // change this letter = taken
+        if (!has_changed) {
+            for (int x = 0; x < 26; x++) {
+                next_mask = mask | (1 << x);
+                if (__builtin_popcount(next_mask) > k) {
+                    res = max(res, 1 + dfs(i + 1, 1 << x, true, dp, s, k));
+                }
+                else {
+                    res = max(res, dfs(i + 1, next_mask, true, dp, s, k));
+                }
+            }
+        }
+
+        return dp[key] = res;
+    }
+public:
+    int maxPartitionsAfterOperations(string s, int k) {
+        unordered_map<long long, int> dp;
+        return dfs(0, 0, false, dp, s, k);
+    }
+};
+```
