update LeetCode Biweekly Contest 168

--- a/algorithm/LeetCode/[Hard] 3347. Maximum Frequency of an Element After Performing Operations II.md
+++ b/algorithm/LeetCode/[Hard] 3347. Maximum Frequency of an Element After Performing Operations II.md
@@ -100,3 +100,141 @@ public:
     }
 };
 ```
+
+**Solution 2: (Sort + Enumerate + Binary Search)**
+```
+Runtime: 920 ms, Beats 52.13%
+Memory: 213.00 MB, Beats 54.50%
+```
+```c++
+class Solution {
+public:
+    int maxFrequency(vector<int>& nums, int k, int numOperations) {
+        sort(nums.begin(), nums.end());
+        int ans = 0;
+        unordered_map<int, int> numCount;
+        set<int> modes;
+
+        auto addMode = [&](int value) {
+            modes.insert(value);
+            if (value - k >= nums.front()) {
+                modes.insert(value - k);
+            }
+            if (value + k <= nums.back()) {
+                modes.insert(value + k);
+            }
+        };
+
+        int lastNumIndex = 0;
+        for (int i = 0; i < nums.size(); ++i) {
+            if (nums[i] != nums[lastNumIndex]) {
+                numCount[nums[lastNumIndex]] = i - lastNumIndex;
+                ans = max(ans, i - lastNumIndex);
+                addMode(nums[lastNumIndex]);
+                lastNumIndex = i;
+            }
+        }
+
+        numCount[nums[lastNumIndex]] = nums.size() - lastNumIndex;
+        ans = max(ans, (int)nums.size() - lastNumIndex);
+        addMode(nums[lastNumIndex]);
+
+        auto leftBound = [&](int value) {
+            int left = 0, right = nums.size() - 1;
+            while (left < right) {
+                int mid = (left + right) / 2;
+                if (nums[mid] < value) {
+                    left = mid + 1;
+                } else {
+                    right = mid;
+                }
+            }
+            return left;
+        };
+
+        auto rightBound = [&](int value) {
+            int left = 0, right = nums.size() - 1;
+            while (left < right) {
+                int mid = (left + right + 1) / 2;
+                if (nums[mid] > value) {
+                    right = mid - 1;
+                } else {
+                    left = mid;
+                }
+            }
+            return left;
+        };
+
+        for (int mode : modes) {
+            int l = leftBound(mode - k);
+            int r = rightBound(mode + k);
+
+            int tempAns;
+            if (numCount.count(mode)) {
+                tempAns = min(r - l + 1, numCount[mode] + numOperations);
+            } else {
+                tempAns = min(r - l + 1, numOperations);
+            }
+            ans = max(ans, tempAns);
+        }
+
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Sort + Enumerate + Binary Search, brute force all candidate)**
+```
+Runtime: 723 ms, Beats 57.35%
+Memory: 213.02 MB, Beats 53.08%
+```
+```c++
+class Solution {
+public:
+    int maxFrequency(vector<int>& nums, int k, int numOperations) {
+        sort(nums.begin(), nums.end());
+        int ans = 0;
+        unordered_map<int, int> numCount;
+        set<int> modes;
+
+        auto addMode = [&](int value) {
+            modes.insert(value);
+            if (value - k >= nums.front()) {
+                modes.insert(value - k);
+            }
+            if (value + k <= nums.back()) {
+                modes.insert(value + k);
+            }
+        };
+
+        int lastNumIndex = 0;
+        for (int i = 0; i < nums.size(); ++i) {
+            if (nums[i] != nums[lastNumIndex]) {
+                numCount[nums[lastNumIndex]] = i - lastNumIndex;
+                ans = max(ans, i - lastNumIndex);
+                addMode(nums[lastNumIndex]);
+                lastNumIndex = i;
+            }
+        }
+
+        numCount[nums[lastNumIndex]] = nums.size() - lastNumIndex;
+        ans = max(ans, (int)nums.size() - lastNumIndex);
+        addMode(nums[lastNumIndex]);
+
+        for (int mode : modes) {
+            int l = lower_bound(nums.begin(), nums.end(), mode - k) - nums.begin();
+            int r = lower_bound(nums.begin(), nums.end(), mode + k + 1) - nums.begin();
+
+            int tempAns;
+            if (numCount.count(mode)) {
+                tempAns = min(r - l, numCount[mode] + numOperations);
+            } else {
+                tempAns = min(r - l, numOperations);
+            }
+            ans = max(ans, tempAns);
+        }
+
+        return ans;
+    }
+};
+```
