--- a/algorithm/LeetCode/[Easy] 1716. Calculate Money in Leetcode Bank.md
+++ b/algorithm/LeetCode/[Easy] 1716. Calculate Money in Leetcode Bank.md
@@ -72,3 +72,21 @@ public:
     }
 };
 ```
+
+**Solution 3: (Math)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.77 MB, Beats 86.15%
+```
+```c++
+class Solution {
+public:
+    int totalMoney(int n) {
+        if (n <= 7) {
+            return (1 + n) * n / 2; 
+        }
+        int a = (1 + 7) * 7 / 2, d = n / 7, r = n % 7;
+        return (a * d) + (7 * (d - 1) * d / 2) + (1 + d + 1 + d + r - 1) * r / 2;
+    }
+};
+```
