--- a/algorithm/LeetCode/[Easy] 3461. Check If Digits Are Equal in String After Operations I.md
+++ b/algorithm/LeetCode/[Easy] 3461. Check If Digits Are Equal in String After Operations I.md
@@ -73,3 +73,25 @@ public:
     }
 };
 ```
+
+**Solution 2: (Simulation)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.43 MB, Beats 91.08%
+```
+```c++
+class Solution {
+public:
+    bool hasSameDigits(string s) {
+        int k = s.length(), i;
+        while (k > 2) {
+            for (i = 0; i < k - 1; i ++) {
+                s[i] = (s[i] - '0' + s[i + 1] - '0') % 10 + '0';
+            }
+            k -= 1;
+        }
+        return s[0] == s[1];
+    }
+};
+
+```
