update LeetCode Weekly Contest 474

--- a/algorithm/LeetCode/[Easy] 3370. Smallest Number With All Set Bits.md
+++ b/algorithm/LeetCode/[Easy] 3370. Smallest Number With All Set Bits.md
@@ -66,3 +66,21 @@ public:
     }
 };
 ```
+
+**Solution 2: (Bit Manipulation)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.20 MB, Beats 89.59%
+```
+```c++
+class Solution {
+public:
+    int smallestNumber(int n) {
+        int ans = 1;
+        while (ans <= n) {
+            ans <<= 1;
+        }
+        return ans - 1;
+    }
+};
+```
