--- a/algorithm/LeetCode/[Hard] 1526. Minimum Number of Increments on Subarrays to Form a Target Array.md
+++ b/algorithm/LeetCode/[Hard] 1526. Minimum Number of Increments on Subarrays to Form a Target Array.md
@@ -87,3 +87,49 @@ public:
     }
 };
 ```
+
+**Solution 3: (Mono Stack)**
+```
+Runtime: 23 ms, Beats 7.05%
+Memory: 78.40 MB, Beats 15.37%
+```
+```c++
+class Solution {
+public:
+    int minNumberOperations(vector<int>& target) {
+        int ans = 0;
+        stack<int> stk;
+        for (auto &num: target) {
+            if (stk.size() && stk.top() >= num) {
+                ans += stk.top() - num;
+                stk.pop();
+                while (stk.size() && stk.top() >= num) {
+                    stk.pop();
+                }
+            }
+            stk.push(num);
+        }
+        ans += stk.top();
+        return ans;
+    }
+};
+```
+
+**Solution 4: (Difference Array)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 77.05 MB, Beats 28.91%
+```
+```c++
+class Solution {
+public:
+    int minNumberOperations(vector<int>& target) {
+        int n = target.size();
+        int ans = target[0];
+        for (int i = 1; i < n; ++i) {
+            ans += max(target[i] - target[i - 1], 0);
+        }
+        return ans;
+    }
+};
+```
