--- a/algorithm/LeetCode/[Easy] 3289. The Two Sneaky Numbers of Digitville.md
+++ b/algorithm/LeetCode/[Easy] 3289. The Two Sneaky Numbers of Digitville.md
@@ -72,3 +72,65 @@ public:
     }
 };
 ```
+
+**Solution 2: (Bitwise Operations)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 25.32 MB, Beats 75.61%
+```
+```c++
+class Solution {
+public:
+    vector<int> getSneakyNumbers(vector<int>& nums) {
+        int n = (int)nums.size() - 2;
+        int y = 0;
+        for (int x : nums) {
+            y ^= x;
+        }
+        for (int i = 0; i < n; i++) {
+            y ^= i;
+        }
+        int lowBit = y & (-y);
+        int x1 = 0, x2 = 0;
+        for (int x : nums) {
+            if (x & lowBit) {
+                x1 ^= x;
+            } else {
+                x2 ^= x;
+            }
+        }
+        for (int i = 0; i < n; i++) {
+            if (i & lowBit) {
+                x1 ^= i;
+            } else {
+                x2 ^= i;
+            }
+        }
+        return {x1, x2};
+    }
+};
+```
+
+**Solution 3: (Math)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 25.21 MB, Beats 86.35%
+```
+```c++
+class Solution {
+public:
+    vector<int> getSneakyNumbers(vector<int>& nums) {
+        int n = (int)nums.size() - 2;
+        int sum = 0, squaredSum = 0;
+        for (int x : nums) {
+            sum += x;
+            squaredSum += x * x;
+        }
+        int sum2 = sum - n * (n - 1) / 2;
+        int squaredSum2 = squaredSum - n * (n - 1) * (2 * n - 1) / 6;
+        int x1 = (sum2 - sqrt(2 * squaredSum2 - sum2 * sum2)) / 2;
+        int x2 = (sum2 + sqrt(2 * squaredSum2 - sum2 * sum2)) / 2;
+        return {x1, x2};
+    }
+};
+```
