update LeetCode Biweekly Contest 169

--- a/algorithm/LeetCode/[Hard] 1036. Escape a Large Maze.md
+++ b/algorithm/LeetCode/[Hard] 1036. Escape a Large Maze.md
@@ -89,3 +89,74 @@ class Solution:
     
     
 ```
+
+**Solution 2: (BFS)**
+
+Question I think the maximum area is 10000?
+Answer
+The maximum area is NOT 10000. Even it's accepted with bound 10000, it's WRONG.
+The same, the bfs with just block.size steps, is also wrong.
+
+In the following case, the area is 19900.
+
+0th      _________________________
+         |O O O O O O O X
+         |O O O O O O X
+         |O O O O O X
+         |O O O O X
+         .O O O X
+         .O O X
+         .O X
+200th    |X
+
+```
+Runtime: 486 ms, Beats 35.78%
+Memory: 75.42 MB, Beats 46.33%
+```
+```c++
+class Solution {
+    set<array<int, 2>> st, visited;
+    int dd[5] = {0, 1, 0, -1, 0};
+    bool bfs(vector<int> &source, vector<int> &target) {
+        int d, nr, nc;
+        queue<array<int, 2>> q;
+        visited.clear();
+        q.push({source[0], source[1]});
+        visited.insert({source[0], source[1]});
+        while (q.size()) {
+            auto [r, c] = q.front();
+            q.pop();
+            if (r == target[0] && c == target[1]) {
+                return true;
+            }
+            for (d = 0; d < 4; d ++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (0 <= nr && nr < 1e6 && 0 <= nc && nc < 1e6) {
+                    if (st.count({nr, nc})) {
+                        continue;
+                    }
+                    if (!visited.count({nr, nc})) {
+                        visited.insert({nr, nc});
+                        q.push({nr, nc});
+                    }
+                }
+            }
+            if (visited.size() > 20000) {
+                return true;
+            }
+        }
+        return false;
+    }
+public:
+    bool isEscapePossible(vector<vector<int>>& blocked, vector<int>& source, vector<int>& target) {
+        for (auto &block: blocked) {
+            st.insert({block[0], block[1]});
+        }
+        if (st.size() == 0) {
+            return true;
+        }
+        return bfs(source, target) && bfs(target, source);
+    }
+};
+```
