--- a/algorithm/LeetCode/[Hard] 1611. Minimum One Bit Operations to Make Integers Zero.md
+++ b/algorithm/LeetCode/[Hard] 1611. Minimum One Bit Operations to Make Integers Zero.md
@@ -139,8 +139,8 @@ public:
 
 **Solution 3: (Iteration)**
 ```
-Runtime: 0 ms
-Memory: 6.4 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.03 MB, Beats 55.27%
 ```
 ```c++
 class Solution {
