--- a/algorithm/LeetCode/[Easy] 2169. Count Operations to Obtain Zero.md
+++ b/algorithm/LeetCode/[Easy] 2169. Count Operations to Obtain Zero.md
@@ -70,3 +70,26 @@ public:
     }
 };
 ```
+
+**Solution 3: (Simulation)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.80 MB, Beats 97.15%
+```
+```c++
+class Solution {
+public:
+    int countOperations(int num1, int num2) {
+        int ans = 0;
+        while (num1 != 0 && num2 != 0) {
+            if (num1 >= num2) {
+                num1 -= num2;
+            } else {
+                num2 -= num1;
+            }
+            ans += 1;
+        }
+        return ans;
+    }
+};
+```
