--- a/algorithm/LeetCode/[Easy] 3318. Find X-Sum of All K-Long Subarrays I.md
+++ b/algorithm/LeetCode/[Easy] 3318. Find X-Sum of All K-Long Subarrays I.md
@@ -49,30 +49,27 @@ Since k == x, answer[i] is equal to the sum of the subarray nums[i..i + k - 1].
 ---
 **Solution 1: (Brute Force)**
 ```
-Runtime: 27 ms
-Memory: 39.80 MB
+Runtime: 11 ms, Beats 77.00%
+Memory: 32.97 MB, Beats 86.26%
 ```
 ```c++
 class Solution {
 public:
     vector<int> findXSum(vector<int>& nums, int k, int x) {
-        int n = nums.size(), ck;
-        vector<int> ans(n-k+1);
-        vector<int> cnt;
-        vector<vector<int>> freq;
-        for (int i = 0; i <= n-k; i ++) {
-            cnt.resize(51);
-            freq.resize(51);
-            for (int j = i; j-i < k; j ++) {
+        int n = nums.size(), i, j, ck, f;
+        vector<int> ans(n - k + 1), cnt(51);
+        vector<vector<int>> freq(51);
+        for (i = 0; i <= n-k; i ++) {
+            for (j = i; j - i < k; j ++) {
                 cnt[nums[j]] += 1;
             }
-            for (int j = 1; j <= 50; j ++) {
+            for (j = 1; j <= 50; j ++) {
                 freq[cnt[j]].push_back(j);
             }
             ck = 0;
-            for (int f = 50; f >= 1; f --) {
+            for (f = 50; f >= 1; f --) {
                 while (freq[f].size()) {
-                    ans[i] += freq[f].back()*f;
+                    ans[i] += freq[f].back() * f;
                     freq[f].pop_back();
                     ck += 1;
                     if (ck == x) {
@@ -83,8 +80,10 @@ public:
                     break;
                 }
             }
-            cnt.clear();
-            freq.clear();
+            fill(cnt.begin(), cnt.end(), 0);
+            for (j = 0; j < freq.size(); j ++) {
+                freq[j].clear();
+            }
         }
         return ans;
     }
