--- a/algorithm/LeetCode/[Hard] 2528. Maximize the Minimum Powered City.md
+++ b/algorithm/LeetCode/[Hard] 2528. Maximize the Minimum Powered City.md
@@ -93,3 +93,108 @@ class Solution:
                 right = mid - 1  # Decrease minPowerRequired to need fewer additional power stations
         return ans
 ```
+
+**Solution 1: (Binary Search + Difference Array)**
+```
+Runtime: 87 ms, Beats 76.34%
+Memory: 227.81 MB, Beats 50.79%
+```
+```c++
+class Solution {
+public:
+    long long maxPower(vector<int>& stations, int r, int k) {
+        int n = stations.size();
+        vector<long long> cnt(n + 1);
+        for (int i = 0; i < n; i++) {
+            int left = max(0, i - r);
+            int right = min(n, i + r + 1);
+            cnt[left] += stations[i];
+            cnt[right] -= stations[i];
+        }
+
+        auto check = [&](long long val) -> bool {
+            vector<long long> diff = cnt;
+            long long sum = 0;
+            long long remaining = k;
+
+            for (int i = 0; i < n; i++) {
+                sum += diff[i];
+                if (sum < val) {
+                    long long add = val - sum;
+                    if (remaining < add) {
+                        return false;
+                    }
+                    remaining -= add;
+                    int end = min(n, i + 2 * r + 1);
+                    diff[end] -= add;
+                    sum += add;
+                }
+            }
+            return true;
+        };
+
+        long long lo = ranges::min(stations);
+        long long hi = accumulate(stations.begin(), stations.end(), 0LL) + k;
+        long long res = 0;
+        while (lo <= hi) {
+            long long mid = lo + (hi - lo) / 2;
+            if (check(mid)) {
+                res = mid;
+                lo = mid + 1;
+            } else {
+                hi = mid - 1;
+            }
+        }
+        return res;
+    }
+};
+```
+
+**Solution 2: (Binary Search, Greedy)**
+```
+Runtime: 62 ms, Beats 95.58%
+Memory: 146.48 MB, Beats 77.29%
+```
+```c++
+class Solution {
+    bool check(long long mid, vector<int> dp, int r, long long k) {
+        int n = dp.size(), i; 
+        long long a = 0, d;
+        for (i = 0; i < r; i ++) {
+            a += dp[i];
+        }
+        for (i = 0; i < n; i ++) {
+            if (i + r < n) {
+                a += dp[i + r];
+            }
+            if (a < mid) {
+                d = mid - a;
+                if (k < d) {
+                    return false;
+                }
+                dp[min(i + r, n - 1)] += d;
+                a += d;
+                k -= d;
+            }
+            if (i - r >= 0) {
+                a -= dp[i - r];
+            }
+        }
+        return true;
+    }
+public:
+    long long maxPower(vector<int>& stations, int r, int k) {
+        long long left = *min_element(stations.begin(), stations.end()), right = accumulate(stations.begin(), stations.end(), 0LL) + k, mid, ans;
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            if (!check(mid, stations, r, k)) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
