update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1293. Shortest Path in a Grid with Obstacles Elimination.md
+++ b/algorithm/LeetCode/[Hard] 1293. Shortest Path in a Grid with Obstacles Elimination.md
@@ -126,3 +126,44 @@ public:
     }
 };
 ```
+
+**SOlution 2: (BFS, Greedy, move right or down is best)**
+```
+Runtime: 9 ms, Beats 82.53%
+Memory: 14.47 MB, Beats 81.82%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+public:
+    int shortestPath(vector<vector<int>>& grid, int k) {
+        int m = grid.size(), n = grid[0].size(), i, j, d, nr, nc;
+        vector<vector<int>> visited(m, vector<int>(n, INT_MAX));
+        queue<array<int, 4>> q;
+        q.push({0, 0, 0, 0});
+        visited[0][0] = 0;
+        while (q.size()) {
+            auto [r, c, ck, s] = q.front();
+            q.pop();
+            if (r == m - 1 && c == n - 1) {
+                return s;
+            }
+            for (d = 0; d < 4; d ++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (0 <= nr && nr < m && 0 <= nc && nc < n) {
+                    if (grid[nr][nc] == 1 && ck + 1 <= k && visited[nr][nc] > ck + 1) {
+                        visited[nr][nc] = ck + 1;
+                        q.push({nr, nc, ck + 1, s + 1});
+                    }
+                    if (grid[nr][nc] == 0 && visited[nr][nc] > ck) {
+                        visited[nr][nc] = ck;
+                        q.push({nr, nc, ck, s + 1});
+                    }
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
