--- a/algorithm/LeetCode/[Hard] 1298. Maximum Candies You Can Get from Boxes.md
+++ b/algorithm/LeetCode/[Hard] 1298. Maximum Candies You Can Get from Boxes.md
@@ -209,3 +209,50 @@ public:
     }
 };
 ```
+
+**Solution 4: (BFS)**
+```
+Runtime: 4 ms, Beats 70.80%
+Memory: 45.86 MB, Beats 61.85%
+```
+```c++
+class Solution {
+public:
+    int maxCandies(vector<int>& status, vector<int>& candies, vector<vector<int>>& keys, vector<vector<int>>& containedBoxes, vector<int>& initialBoxes) {
+        int n = status.size(), i, ans = 0;
+        vector<int> visited(n);
+        queue<int> q;
+        for (i = 0; i < n; i ++) {
+            if (status[i]) {
+                visited[i] = 2;
+            }
+        }
+        for (auto &b: initialBoxes) {
+            visited[b] |= 1;
+            if (visited[b] & 2) {
+                q.push(b);
+                visited[b] |= 4;
+                ans += candies[b];
+            }
+        }
+        while (q.size()) {
+            auto b = q.front();
+            q.pop();
+            for (auto &nb: containedBoxes[b]) {
+                visited[nb] |= 1;
+            }
+            for (auto &nk: keys[b]) {
+                visited[nk] |= 2;
+            }
+            for (i = 0; i < n; i ++) {
+                if ((visited[i] & 7) == 3) {
+                    q.push(i);
+                    visited[i] |= 4;
+                    ans += candies[i];
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
