--- a/algorithm/LeetCode/[Hard] 1345. Jump Game IV.md
+++ b/algorithm/LeetCode/[Hard] 1345. Jump Game IV.md
@@ -261,3 +261,51 @@ public:
     }
 };
 ```
+
+**Solution 5: (BFS, after visited then remove graph connection)**
+```
+Runtime: 82 ms, Beats 74.26%
+Memory: 79.97 MB, Beats 58.77%
+```
+```c++
+class Solution {
+public:
+    int minJumps(vector<int>& arr) {
+        int n = arr.size(), i, nj;
+        unordered_map<int, vector<int>> m;
+        queue<array<int, 3>> q;
+        vector<bool> visited(n);
+        for (i = 0; i < n; i ++) {
+            m[arr[i]].push_back(i);
+        }
+        q.push({arr[0], 0, 0});
+        visited[0] = true;
+        while (q.size()) {
+            auto [a, j, s] = q.front();
+            q.pop();
+            if (j == n - 1) {
+                return s;
+            }
+            nj = j + 1;
+            if (nj < n && !visited[nj]) {
+                visited[nj] = true;
+                q.push({arr[nj], nj, s + 1});
+            }
+            nj = j - 1;
+            if (nj >= 0 && !visited[nj]) {
+                visited[nj] = true;
+                q.push({arr[nj], nj, s + 1});
+            }
+            for (auto &mj: m[a]) {
+                if (!visited[mj]) {
+                    visited[mj] = true;
+                    q.push({a, mj, s + 1});
+                }
+            }
+            m[a].clear();
+        }
+        return -1;
+    }
+};
+
+```
