--- a/algorithm/LeetCode/[Hard] 1368. Minimum Cost to Make at Least One Valid Path in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 1368. Minimum Cost to Make at Least One Valid Path in a Grid.md
@@ -426,6 +426,7 @@ Memory: 21.80 MB, Beats 55.78%
 ```c++
 class Solution {
     int dd[4][2] = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+                  // right    left     down    up
 public:
     int minCost(vector<vector<int>>& grid) {
         int m = grid.size(), n = grid[0].size(), d, ni, nj;
