--- a/algorithm/LeetCode/[Hard] 1096. Brace Expansion II.md
+++ b/algorithm/LeetCode/[Hard] 1096. Brace Expansion II.md
@@ -97,6 +97,15 @@ class Solution:
 ```
 
 **Solution 3: (Stack, Set)**
+
+                                                                                                          v
+       "{       a      ,      b      }       {    c       ,      {    d    ,    e           }             }"
+s   ""          a     ""      b                   c                   d   ""    e
+st  {}         {}                 {a,b}      {}                                             {ac,ad,ae,bc,bd,be}
+nst {}
+stk                                                            {}{}     {}{d}              x
+       {}{}         {}{a}   {}{a}   x  (a,b}{}      {a,b}{c}                     {a,b}{c,d,e}            x
+  {}{}                                                
 ```
 Runtime: 13 ms, Beats 32.79%
 Memory: 16.41 MB, Beats 51.64%
