--- a/algorithm/LeetCode/[Hard] 1203. Sort Items by Groups Respecting Dependencies.md
+++ b/algorithm/LeetCode/[Hard] 1203. Sort Items by Groups Respecting Dependencies.md
@@ -111,67 +111,79 @@ class Solution:
         return result
 ```
 
-**Solution 2: (Topological Sort)**
+**Solution 2: (Topological Sort, 2 level, group then item)**
 ```
-Runtime: 66 ms
-Memory: 44.6 MB
+Runtime: 43 ms, Beats 91.94%
+Memory: 49.20 MB, Beats 89.05%
 ```
 ```c++
 class Solution {
-    vector<int> topo_sort( vector<vector<int>>& adj, vector<int>& deg, int sz){
-        //Kahn's algorithm
+    vector<int> topo_sort(vector<vector<int>> &g, vector<int> &deg) {
+        int i;
         queue<int> q;
-        for (int i=0; i<sz; i++)
-            if (deg[i]==0) q.push(i);
-        vector<int> res;
-        while(!q.empty()){
-            int x=q.front();
-            q.pop();
-            res.push_back(x);
-            for(int y: adj[x]){
-                deg[y]--;
-                if(deg[y]==0) q.push(y);
+        for (i = 0; i < deg.size(); i++) {
+            if (deg[i] == 0) {
+                q.push(i);
             }
         }
-        for(int i=0; i<sz; i++)
-            if(deg[i]>0) return {};
-        return res;
+        vector<int> rst;
+        while (!q.empty()) {
+            auto u = q.front();
+            q.pop();
+            rst.push_back(u);
+            for (auto v: g[u]) {
+                deg[v] -= 1;
+                if (deg[v] == 0) {
+                    q.push(v);
+                }
+            }
+        }
+        for (i = 0; i < deg.size(); i++) {
+            if (deg[i] > 0) {
+                return {};
+            }
+        }
+        return rst;
     }
+
 public:
     vector<int> sortItems(int n, int m, vector<int>& group, vector<vector<int>>& beforeItems) {
+        int i, to_grp, from_grp;
         // isolated item is a group by itself
-        for(int i=0; i<n; i++){
-            if (group[i]==-1) group[i]=m++;
+        for (i = 0; i < n; i ++) {
+            if (group[i] == -1) {
+                group[i] = m++;
+            }
         }
-        vector<vector<int>> adj_group(m) , adj_item(n);
-        vector<int> deg_group(m, 0), deg_item(n, 0);
-        for(int i=0; i<n; i++){
-            int to_i=group[i];
-            for(int from: beforeItems[i]){
-                int from_j=group[from];
-                if(to_i!=from_j){
-                    adj_group[from_j].push_back(to_i);
-                    deg_group[to_i]++;
+        vector<vector<int>> g_group(m), g_item(n);
+        vector<int> deg_group(m), deg_item(n);
+        for (i = 0; i < n; i ++){
+            to_grp = group[i];
+            for (auto j: beforeItems[i]){
+                from_grp = group[j];
+                if (to_grp != from_grp) {
+                    g_group[from_grp].push_back(to_grp);
+                    deg_group[to_grp]++;
                 }
-                adj_item[from].push_back(i);
+                g_item[j].push_back(i);
                 deg_item[i]++;
             }
         }
-        vector<int> sort_group=topo_sort(adj_group, deg_group, m);
-        vector<int> sort_item=topo_sort(adj_item, deg_item, n); 
-        if (sort_group.empty() || sort_item.empty()) return {};
-
-        vector<vector<int>> item_gp(m);
-        for(int i: sort_item)
-            item_gp[group[i]].push_back(i);
-        
+        vector<int> sort_group = topo_sort(g_group, deg_group);
+        vector<int> sort_item = topo_sort(g_item, deg_item); 
+        if (sort_group.empty() || sort_item.empty()) {
+            return {};
+        }
+        vector<vector<int>> item_grp(m);
+        for (auto j: sort_item) {
+            item_grp[group[j]].push_back(j);
+        }
         vector<int> ans;
-        for(int i : sort_group) {
-            for(int item : item_gp[i]) {
-                ans.push_back(item);
+        for (auto grp: sort_group) {
+            for (auto v: item_grp[grp]) {
+                ans.push_back(v);
             }
         }
-        
         return ans;
     }
 };
