--- a/algorithm/LeetCode/[Hard] 1210. Minimum Moves to Reach Target with Rotations.md
+++ b/algorithm/LeetCode/[Hard] 1210. Minimum Moves to Reach Target with Rotations.md
@@ -94,3 +94,60 @@ class Solution:
             moves += 1
         return -1
 ```
+
+**Solution 2: (BFS)**
+```
+Runtime: 20 ms, Beats 91.30%
+Memory: 18.26 MB, Beats 78.26%
+```
+```c++
+class Solution {
+public:
+    int minimumMoves(vector<vector<int>>& grid) {
+        int n = grid.size();
+        queue<array<int, 4>> q;
+        vector<vector<int>> visited(n, vector<int>(n));
+        q.push({0, 0, 1, 0});
+        visited[0][0] = 1;
+        while (q.size()) {
+            auto [r, c, d, s] = q.front();
+            q.pop();
+            if (r == n - 1 && c == n - 2 && d == 1) {
+                return s;
+            }
+            if (d == 1) {
+                if (c + 2 < n && grid[r][c + 2] == 0 && (visited[r][c + 1] & 1) == 0) {
+                    visited[r][c + 1] |= 1;
+                    q.push({r, c + 1, 1, s + 1});
+                }
+                if (r + 1 < n && c + 1 < n && grid[r + 1][c] == 0 && grid[r + 1][c + 1] == 0) {
+                    if (!(visited[r + 1][c] & 1)) {
+                        visited[r + 1][c] |= 1;
+                        q.push({r + 1, c, 1, s + 1});
+                    }
+                    if (!(visited[r][c] & 2)) {
+                        visited[r][c] |= 2;
+                        q.push({r, c, 2, s + 1});
+                    }
+                }
+            } else {
+                if (r + 2 < n && grid[r + 2][c] == 0 && !(visited[r + 1][c] & 2)) {
+                    visited[r + 1][c] |= 2;
+                    q.push({r + 1, c, 2, s + 1});
+                }
+                if (r + 1 < n && c + 1 < n && grid[r][c + 1] == 0 && grid[r + 1][c + 1] == 0) {
+                    if (!(visited[r][c + 1] & 2)) {
+                        visited[r][c + 1] |= 2;
+                        q.push({r, c + 1, 2, s + 1});
+                    }
+                    if (!(visited[r][c] & 1)) {
+                        visited[r][c] |= 1;
+                        q.push({r, c, 1, s + 1});
+                    }
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
