--- a/algorithm/LeetCode/[Hard] 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.md
+++ b/algorithm/LeetCode/[Hard] 1284. Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.md
@@ -101,3 +101,57 @@ class Solution:
 
         return -1
 ```
+
+**Solution 2: (BFS, Brute Force, O(2^(m * n)))**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 9.46 MB, Beats 60.53%
+```
+```c++
+class Solution {
+public:
+    int minFlips(vector<vector<int>>& mat) {
+        int m = mat.size(), n = mat[0].size(), i, j, a = 0, c;
+        queue<array<int, 2>> q;
+        vector<int> visited(1024);
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                if (mat[i][j]) {
+                    a += 1 << (i * n + j);
+                }
+            }
+        }
+        q.push({a, 0});
+        while (q.size()) {
+            auto [b, k] = q.front();
+            q.pop();
+            if (b == 0) {
+                return k;
+            }
+            for (i = 0; i < m; i ++) {
+                for (j = 0; j < n; j ++) {
+                    c = b;
+                    c ^= (1 << (i * n + j));
+                    if (i) {
+                        c ^= (1 << ((i - 1)* n + j));
+                    }
+                    if (j) {
+                        c ^= (1 << (i * n + (j - 1)));
+                    }
+                    if (i + 1 < m) {
+                        c ^= (1 << ((i + 1) * n + j));
+                    }
+                    if (j + 1 < n) {
+                        c ^= (1 << (i * n + j + 1));
+                    }
+                    if (!visited[c]) {
+                        visited[c] = 1;
+                        q.push({c, k + 1}); 
+                    }
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
