--- a/algorithm/LeetCode/[Hard] 1483. Kth Ancestor of a Tree Node.md
+++ b/algorithm/LeetCode/[Hard] 1483. Kth Ancestor of a Tree Node.md
@@ -72,3 +72,61 @@ class TreeAncestor:
 # obj = TreeAncestor(n, parent)
 # param_1 = obj.getKthAncestor(node,k)
 ```
+
+**Solution 2: (binary lifting, DP Bottom-Up)**
+
+            0
+          /   \
+        1      2
+       / \    /  \
+      3  4   5   6
+
+    parents = [-1, 0, 0, 1, 1, 2, 2]
+                vi
+    par        -1  0  0  1  1  2  2 <j
+                  -1 -1  0  0  0  0
+                        -1 -1 -1 -1
+```
+Runtime: 57 ms, Beats 61.59%
+Memory: 124.52 MB, Beats 45.15%
+```
+```c++
+class TreeAncestor {
+    vector<vector<int>> dp;
+public:
+    TreeAncestor(int n, vector<int>& parent) {
+        vector<vector<int>> par(n, vector<int>(20));
+        for (int i = 0; i < n; i++) {
+            par[i][0] = parent[i];
+        }
+        for (int j = 1; j < 20; j++) {
+            for (int i = 0; i < n; i++) {
+                if (par[i][j - 1] == -1) {
+                    par[i][j] = -1;
+                } else {
+                    par[i][j] = par[par[i][j - 1]][j - 1];
+                }
+            }
+        }
+        dp = move(par);
+    }
+    
+    int getKthAncestor(int node, int k) {
+        for (int i = 0; i < 20; i++) {
+            if ((k >> i) & 1) {
+                node = dp[node][i];
+                if (node == -1) {
+                    return -1;
+                }
+            }
+        }
+        return node;
+    }
+};
+
+/**
+ * Your TreeAncestor object will be instantiated and called as such:
+ * TreeAncestor* obj = new TreeAncestor(n, parent);
+ * int param_1 = obj->getKthAncestor(node,k);
+ */
+```
